--- a/GameExt.cbp
+++ b/GameExt.cbp
@@ -12,7 +12,7 @@
 				<Option type="1" />
 				<Option compiler="gcc_uniwin" />
 				<Compiler>
-					<Add option="-fPIC -gdwarf-2 -fpermissive -std=c++11 -g" />
+					<Add option="-fPIC -gdwarf-2 -fpermissive -std=c++11" />
 				</Compiler>
 				<Linker>
 					<Add option="-shared -lpthread -Wl,-soname=libgame.so" />
