--- a/GameExt.cbp
+++ b/GameExt.cbp
@@ -12,16 +12,19 @@
 				<Option type="1" />
 				<Option compiler="gcc_uniwin" />
 				<Compiler>
-					<Add option="-fPIC -gdwarf-2 -fpermissive -std=c++11" />
+					<Add option="-fPIC -g -fpermissive -std=c++11" />
 				</Compiler>
 				<Linker>
 					<Add option="-shared -lpthread -Wl,-soname=libgame.so" />
+					<Add option="-L/usr/local/lib/mysql -lmysqlclient  -pthread -lz -lm" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="src/dif/EmpirePriv.cpp" />
+		<Unit filename="src/dif/EmpirePriv.hpp" />
 		<Unit filename="src/game/iCHARACTER.hpp" />
 		<Unit filename="src/hooks/CharacterConstructor.cpp" />
 		<Unit filename="src/hooks/CharacterConstructor.hpp" />
@@ -29,43 +32,74 @@
 		<Unit filename="src/hooks/SyncPosition.hpp" />
 		<Unit filename="src/libm2/Command.cpp" />
 		<Unit filename="src/libm2/Command.hpp" />
+		<Unit filename="src/libm2/IQuest.cpp" />
+		<Unit filename="src/libm2/IQuest.hpp" />
 		<Unit filename="src/libm2/LibM2.cpp" />
 		<Unit filename="src/libm2/LibM2.hpp" />
 		<Unit filename="src/libm2/addr.hpp" />
 		<Unit filename="src/libm2/game/BUFFER.hpp" />
 		<Unit filename="src/libm2/game/CAffect.hpp" />
 		<Unit filename="src/libm2/game/CArena.hpp" />
+		<Unit filename="src/libm2/game/CAsyncSQL.hpp" />
 		<Unit filename="src/libm2/game/CAttribute.hpp" />
 		<Unit filename="src/libm2/game/CBuffOnAttributes.hpp" />
+		<Unit filename="src/libm2/game/CBuyerThiefGlovesItemGroup.hpp" />
+		<Unit filename="src/libm2/game/CClientPackageCryptInfo.hpp" />
+		<Unit filename="src/libm2/game/CDropItemGroup.hpp" />
 		<Unit filename="src/libm2/game/CDungeon.hpp" />
 		<Unit filename="src/libm2/game/CEntity.cpp" />
 		<Unit filename="src/libm2/game/CEntity.hpp" />
 		<Unit filename="src/libm2/game/CExchange.hpp" />
+		<Unit filename="src/libm2/game/CFSM.cpp" />
 		<Unit filename="src/libm2/game/CFSM.hpp" />
 		<Unit filename="src/libm2/game/CGrid.hpp" />
 		<Unit filename="src/libm2/game/CGuild.hpp" />
+		<Unit filename="src/libm2/game/CGuildManager.cpp" />
+		<Unit filename="src/libm2/game/CGuildManager.hpp" />
+		<Unit filename="src/libm2/game/CGuildWarReserveForGame.hpp" />
 		<Unit filename="src/libm2/game/CHARACTER.cpp" />
 		<Unit filename="src/libm2/game/CHARACTER.hpp" />
 		<Unit filename="src/libm2/game/CHARACTER_MANAGER.cpp" />
 		<Unit filename="src/libm2/game/CHARACTER_MANAGER.hpp" />
+		<Unit filename="src/libm2/game/CHorseRider.cpp" />
 		<Unit filename="src/libm2/game/CHorseRider.hpp" />
+		<Unit filename="src/libm2/game/CInputAuth.cpp" />
 		<Unit filename="src/libm2/game/CInputAuth.hpp" />
+		<Unit filename="src/libm2/game/CInputClose.cpp" />
 		<Unit filename="src/libm2/game/CInputClose.hpp" />
+		<Unit filename="src/libm2/game/CInputDB.hpp" />
+		<Unit filename="src/libm2/game/CInputDead.cpp" />
 		<Unit filename="src/libm2/game/CInputDead.hpp" />
 		<Unit filename="src/libm2/game/CInputHandshake.hpp" />
+		<Unit filename="src/libm2/game/CInputLogin.cpp" />
 		<Unit filename="src/libm2/game/CInputLogin.hpp" />
+		<Unit filename="src/libm2/game/CInputMain.cpp" />
 		<Unit filename="src/libm2/game/CInputMain.hpp" />
+		<Unit filename="src/libm2/game/CInputP2P.hpp" />
+		<Unit filename="src/libm2/game/CInputProcessor.cpp" />
 		<Unit filename="src/libm2/game/CInputProcessor.hpp" />
+		<Unit filename="src/libm2/game/CInputTeen.hpp" />
+		<Unit filename="src/libm2/game/CItem.cpp" />
 		<Unit filename="src/libm2/game/CItem.hpp" />
+		<Unit filename="src/libm2/game/CLIENT_DESC.hpp" />
+		<Unit filename="src/libm2/game/CLevelItemGroup.hpp" />
+		<Unit filename="src/libm2/game/CLoginData.hpp" />
 		<Unit filename="src/libm2/game/CLoginKey.hpp" />
 		<Unit filename="src/libm2/game/CMob.hpp" />
 		<Unit filename="src/libm2/game/CMobInstance.hpp" />
+		<Unit filename="src/libm2/game/CMobItemGroup.hpp" />
 		<Unit filename="src/libm2/game/CPacketInfo.hpp" />
 		<Unit filename="src/libm2/game/CParty.hpp" />
 		<Unit filename="src/libm2/game/CPetActor.hpp" />
 		<Unit filename="src/libm2/game/CPetSystem.hpp" />
 		<Unit filename="src/libm2/game/CSafebox.hpp" />
+		<Unit filename="src/libm2/game/CSemaphore.hpp" />
 		<Unit filename="src/libm2/game/CShop.hpp" />
+		<Unit filename="src/libm2/game/CShopManager.cpp" />
+		<Unit filename="src/libm2/game/CShopManager.hpp" />
+		<Unit filename="src/libm2/game/CSpecialAttrGroup.hpp" />
+		<Unit filename="src/libm2/game/CSpecialItemGroup.hpp" />
+		<Unit filename="src/libm2/game/CState.cpp" />
 		<Unit filename="src/libm2/game/CState.hpp" />
 		<Unit filename="src/libm2/game/CStateTemplate.hpp" />
 		<Unit filename="src/libm2/game/CTrigger.hpp" />
@@ -79,23 +113,58 @@
 		<Unit filename="src/libm2/game/CryptoPP/secblock.h" />
 		<Unit filename="src/libm2/game/CryptoPP/smartptr.h" />
 		<Unit filename="src/libm2/game/CryptoPP/stdcpp.h" />
+		<Unit filename="src/libm2/game/DBManager.cpp" />
+		<Unit filename="src/libm2/game/DBManager.hpp" />
 		<Unit filename="src/libm2/game/DESC.cpp" />
 		<Unit filename="src/libm2/game/DESC.hpp" />
+		<Unit filename="src/libm2/game/DESC_MANAGER.cpp" />
+		<Unit filename="src/libm2/game/DESC_MANAGER.hpp" />
+		<Unit filename="src/libm2/game/EVENT.cpp" />
 		<Unit filename="src/libm2/game/EVENT.hpp" />
 		<Unit filename="src/libm2/game/FDWATCH.hpp" />
+		<Unit filename="src/libm2/game/ITEM_MANAGER.cpp" />
+		<Unit filename="src/libm2/game/ITEM_MANAGER.hpp" />
 		<Unit filename="src/libm2/game/PIXEL_POSITION.hpp" />
 		<Unit filename="src/libm2/game/SAccountTable.hpp" />
 		<Unit filename="src/libm2/game/SECTREE.hpp" />
+		<Unit filename="src/libm2/game/SECTREE_MANAGER.cpp" />
+		<Unit filename="src/libm2/game/SECTREE_MANAGER.hpp" />
+		<Unit filename="src/libm2/game/SECTREE_MAP.cpp" />
+		<Unit filename="src/libm2/game/SECTREE_MAP.hpp" />
 		<Unit filename="src/libm2/game/SEntityTable.hpp" />
 		<Unit filename="src/libm2/game/SItemTable.hpp" />
+		<Unit filename="src/libm2/game/SMapRegion.hpp" />
 		<Unit filename="src/libm2/game/SPlayerTable.hpp" />
+		<Unit filename="src/libm2/game/SQLMsg.cpp" />
+		<Unit filename="src/libm2/game/SQLMsg.hpp" />
+		<Unit filename="src/libm2/game/SQLResult.cpp" />
+		<Unit filename="src/libm2/game/SQLResult.hpp" />
+		<Unit filename="src/libm2/game/SSetting.hpp" />
+		<Unit filename="src/libm2/game/SShopTable.hpp" />
 		<Unit filename="src/libm2/game/SSimplePlayer.hpp" />
+		<Unit filename="src/libm2/game/SUseTime.hpp" />
+		<Unit filename="src/libm2/game/TAffectFlag.cpp" />
+		<Unit filename="src/libm2/game/TAffectFlag.hpp" />
+		<Unit filename="src/libm2/game/TAreaInfo.hpp" />
+		<Unit filename="src/libm2/game/VID.cpp" />
 		<Unit filename="src/libm2/game/VID.hpp" />
+		<Unit filename="src/libm2/game/enums.hpp" />
 		<Unit filename="src/libm2/game/fwDecl.hpp" />
+		<Unit filename="src/libm2/game/lua.cpp" />
+		<Unit filename="src/libm2/game/lua.hpp" />
 		<Unit filename="src/libm2/game/marriage/WeddingMap.hpp" />
 		<Unit filename="src/libm2/game/misc.cpp" />
 		<Unit filename="src/libm2/game/misc.hpp" />
+		<Unit filename="src/libm2/game/npc_info.hpp" />
 		<Unit filename="src/libm2/game/packet.hpp" />
+		<Unit filename="src/libm2/game/quest/AArgScript.hpp" />
+		<Unit filename="src/libm2/game/quest/AStateScriptType.hpp" />
+		<Unit filename="src/libm2/game/quest/CQuestManager.cpp" />
+		<Unit filename="src/libm2/game/quest/CQuestManager.hpp" />
+		<Unit filename="src/libm2/game/quest/NPC.hpp" />
+		<Unit filename="src/libm2/game/quest/PC.hpp" />
+		<Unit filename="src/libm2/game/quest/QuestState.hpp" />
+		<Unit filename="src/libm2/game/quest/RewardData.hpp" />
 		<Unit filename="src/libm2/game/regen.hpp" />
 		<Unit filename="src/libm2/game/stdInclude.hpp" />
 		<Unit filename="src/libm2/lib/GameSingleton.hpp" />
@@ -117,40 +186,11 @@
 		<Unit filename="src/libm2/utils/lua/lauxlib.h" />
 		<Unit filename="src/libm2/utils/lua/lua.h" />
 		<Unit filename="src/libm2/utils/lua/lualib.h" />
-		<Unit filename="src/libm2/utils/mysql/decimal.h" />
-		<Unit filename="src/libm2/utils/mysql/errmsg.h" />
-		<Unit filename="src/libm2/utils/mysql/keycache.h" />
-		<Unit filename="src/libm2/utils/mysql/m_ctype.h" />
-		<Unit filename="src/libm2/utils/mysql/m_string.h" />
-		<Unit filename="src/libm2/utils/mysql/my_alloc.h" />
-		<Unit filename="src/libm2/utils/mysql/my_attribute.h" />
-		<Unit filename="src/libm2/utils/mysql/my_compiler.h" />
-		<Unit filename="src/libm2/utils/mysql/my_config.h" />
-		<Unit filename="src/libm2/utils/mysql/my_dbug.h" />
-		<Unit filename="src/libm2/utils/mysql/my_dir.h" />
-		<Unit filename="src/libm2/utils/mysql/my_getopt.h" />
-		<Unit filename="src/libm2/utils/mysql/my_global.h" />
-		<Unit filename="src/libm2/utils/mysql/my_list.h" />
-		<Unit filename="src/libm2/utils/mysql/my_net.h" />
-		<Unit filename="src/libm2/utils/mysql/my_no_pthread.h" />
-		<Unit filename="src/libm2/utils/mysql/my_pthread.h" />
-		<Unit filename="src/libm2/utils/mysql/my_sys.h" />
-		<Unit filename="src/libm2/utils/mysql/my_xml.h" />
-		<Unit filename="src/libm2/utils/mysql/mysql.h" />
-		<Unit filename="src/libm2/utils/mysql/mysql_com.h" />
-		<Unit filename="src/libm2/utils/mysql/mysql_embed.h" />
-		<Unit filename="src/libm2/utils/mysql/mysql_time.h" />
-		<Unit filename="src/libm2/utils/mysql/mysql_version.h" />
-		<Unit filename="src/libm2/utils/mysql/mysqld_ername.h" />
-		<Unit filename="src/libm2/utils/mysql/mysqld_error.h" />
-		<Unit filename="src/libm2/utils/mysql/plugin.h" />
-		<Unit filename="src/libm2/utils/mysql/sql_common.h" />
-		<Unit filename="src/libm2/utils/mysql/sql_state.h" />
-		<Unit filename="src/libm2/utils/mysql/sslopt-case.h" />
-		<Unit filename="src/libm2/utils/mysql/sslopt-longopts.h" />
-		<Unit filename="src/libm2/utils/mysql/sslopt-vars.h" />
-		<Unit filename="src/libm2/utils/mysql/typelib.h" />
 		<Unit filename="src/main.cpp" />
+		<Unit filename="src/quest/npc2.cpp" />
+		<Unit filename="src/quest/npc2.hpp" />
+		<Unit filename="src/quest/pc2.cpp" />
+		<Unit filename="src/quest/pc2.hpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
