--- a/GameExt.cbp
+++ b/GameExt.cbp
@@ -56,6 +56,8 @@
 		<Unit filename="src/hooks/NumberEx.hpp" />
 		<Unit filename="src/hooks/SyncPosition.cpp" />
 		<Unit filename="src/hooks/SyncPosition.hpp" />
+		<Unit filename="src/hooks/UseItemEx.cpp" />
+		<Unit filename="src/hooks/UseItemEx.hpp" />
 		<Unit filename="src/libm2/Command.cpp" />
 		<Unit filename="src/libm2/Command.hpp" />
 		<Unit filename="src/libm2/IQuest.cpp" />
@@ -102,6 +104,7 @@
 		<Unit filename="src/libm2/game/CInputLogin.hpp" />
 		<Unit filename="src/libm2/game/CInputMain.cpp" />
 		<Unit filename="src/libm2/game/CInputMain.hpp" />
+		<Unit filename="src/libm2/game/CInputP2P.cpp" />
 		<Unit filename="src/libm2/game/CInputP2P.hpp" />
 		<Unit filename="src/libm2/game/CInputProcessor.cpp" />
 		<Unit filename="src/libm2/game/CInputProcessor.hpp" />
@@ -153,6 +156,8 @@
 		<Unit filename="src/libm2/game/FDWATCH.hpp" />
 		<Unit filename="src/libm2/game/ITEM_MANAGER.cpp" />
 		<Unit filename="src/libm2/game/ITEM_MANAGER.hpp" />
+		<Unit filename="src/libm2/game/LogManager.cpp" />
+		<Unit filename="src/libm2/game/LogManager.hpp" />
 		<Unit filename="src/libm2/game/P2P_MANAGER.cpp" />
 		<Unit filename="src/libm2/game/P2P_MANAGER.hpp" />
 		<Unit filename="src/libm2/game/PIXEL_POSITION.hpp" />
@@ -183,10 +188,22 @@
 		<Unit filename="src/libm2/game/VID.cpp" />
 		<Unit filename="src/libm2/game/VID.hpp" />
 		<Unit filename="src/libm2/game/_CCI.hpp" />
+		<Unit filename="src/libm2/game/building/CLand.cpp" />
+		<Unit filename="src/libm2/game/building/CLand.hpp" />
+		<Unit filename="src/libm2/game/building/CManager.cpp" />
+		<Unit filename="src/libm2/game/building/CManager.hpp" />
+		<Unit filename="src/libm2/game/building/CObject.cpp" />
+		<Unit filename="src/libm2/game/building/CObject.hpp" />
+		<Unit filename="src/libm2/game/building/SObjectProto.hpp" />
 		<Unit filename="src/libm2/game/enums.hpp" />
 		<Unit filename="src/libm2/game/fwDecl.hpp" />
 		<Unit filename="src/libm2/game/lua.cpp" />
 		<Unit filename="src/libm2/game/lua.hpp" />
+		<Unit filename="src/libm2/game/marriage/CManager.cpp" />
+		<Unit filename="src/libm2/game/marriage/CManager.hpp" />
+		<Unit filename="src/libm2/game/marriage/TMarriage.cpp" />
+		<Unit filename="src/libm2/game/marriage/TMarriage.hpp" />
+		<Unit filename="src/libm2/game/marriage/TWeddingInfo.hpp" />
 		<Unit filename="src/libm2/game/marriage/WeddingMap.hpp" />
 		<Unit filename="src/libm2/game/misc.cpp" />
 		<Unit filename="src/libm2/game/misc.hpp" />
